chore: add tile mask in detection payload